# Multimodal-AI-Triage-Assistant

./: .gitignore  README.md  benchmark_baseline.py  build_final_dataset.py  clinical_rag_engine.py  clinicalbert_embeddings_768d.npy  dataset.py  frostbyte_late_fusion.py  frostbyte_multimodal_pipeline.ipynb  frostbyte_text_embeddings.py  frostbyte_vision_embeddings.py  preprocessing_service.py  pytorch_fusion_model.py  requirements.txt  run_benchmarks.py  synthetic_triage_data.csv  train_tabular.py  triage_dataset_final.csv  triage_master_multimodal.csv  triage_multimodal_model(1).txt
backend/: Cargo.toml
backend/src/: main.rs  models.rs  state.rs
backend/src/routes/: health.rs  mod.rs  next_steps.rs  predict.rs
