[package]
name = "frostbyte-backend"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust inference backend for the Frostbyte Multimodal Triage System"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LightGBM FFI bindings — loads triage_multimodal_model.txt natively
lightgbm3 = "1.0"

# HTTP client — calls Python preprocessing microservice
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
